# OOP

./: README.md  pyproject.toml
src/: Category.py  Product.py  category.py  from_product.py  main.py  mixin_log.py  product.py
tests/: test_Category.py  test_Product.py  test_category.py  test_product.py
